--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @project , url: {action: "create"} do |f| %>
- <%= f.label :name %><br>
- <%= f.text_field :name, autocomplete: 'off' %><br>
+ <%= f.label 'Project Name:' %>
+ <%= f.text_field :name, autocomplete: 'off' %><br><br>
    <%= f.fields_for :tasks, @project.tasks.build do |ff| %>
-    <%= ff.label :title %><br>
-    <%= ff.text_field :title , autocomplete: 'off' %><br>
+    <%= ff.label 'Project Title:' %>
+    <%= ff.text_field :title , autocomplete: 'off' %><br><br>
    <% end %>
  <%= f.submit %>
 <% end %>
